# Last-Train-Home

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app.cpp  audio.cpp  core.h  game.cpp  game.h  gfx.cpp  jni.cpp  lighting.cpp  loader.cpp  loader.h  main.cpp  main.h
app/src/main/cpp/AL/: ALc.c  ALu.c  alAuxEffectSlot.c  alAuxEffectSlot.h  alBuffer.c  alBuffer.h  alEffect.c  alEffect.h  alError.c  alError.h  alExtension.c  alFilter.c  alFilter.h  alListener.c  alListener.h  alMain.h  alSource.c  alSource.h  alState.c  alcReverb.c  alu.h  config.h  hrtf.c  loopback.c  mixer.c  null.c  opensl.c  panning.c  wave.c
app/src/main/cpp/asset_utils/: android_fopen.cpp  android_fopen.h
app/src/main/java/com/carlosbispo/lasttrainhome/: GameLibJNIWrapper.java  MainActivity.java  RendererWrapper.java  TouchInterface.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
